# sample-phone-number-validator

./: .tool-versions  Dockerfile  README.md  main.py  pyproject.toml
phone_number_validator/: validator.py
tests/: test_validator.py
